--- a/package.json
+++ b/package.json
@@ -22,7 +22,8 @@
     "express": "^4.21.2",
     "jsonwebtoken": "^9.0.2",
     "mongodb": "^6.13.1",
-    "mongoose": "^8.10.1",
+    "mongoose": "^8.12.1",
+    "mquery": "^5.0.0",
     "nodemon": "^3.1.9"
   }
 }
